# CMakeLists
# To compile CUDA code
#
# Author: Dylan Campbell
# Date: 20190222
# Revision: 1.0

PROJECT(ESSENTIAL_MATRIX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

FIND_PACKAGE(CUDA REQUIRED)
SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; --std=c++11; -arch=sm_30)

SET(ESSENTIAL_MATRIX_SRCS
essential_matrix_main.cu
)

CUDA_ADD_EXECUTABLE(essential_matrix ${ESSENTIAL_MATRIX_SRCS})
#TARGET_LINK_LIBRARIES(essential_matrix)
